--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,13 +17,42 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 20.x
-          cache: 'npm' # Caches node_modules to speed up subsequent runs
+          cache: 'npm'
 
       - name: Install dependencies
-        run: npm ci # Use npm ci for clean installs in CI
+        run: npm ci
 
       - name: Build
         run: npm run build --if-present
 
       - name: Test
         run: npm test
+
+  docker:
+    runs-on: ubuntu-latest
+    needs: build # Runs after the build job
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Set up Docker Daemon
+        run: |
+          sudo mkdir -p /etc/docker
+          echo '{ "insecure-registries": ["65.2.141.37:8082"] }' | sudo tee /etc/docker/daemon.json
+          sudo systemctl restart docker
+
+      - name: Log in to Nexus Docker Registry
+        run: echo "${{ secrets.NEXUS_PASSWORD }}" | docker login 65.2.141.37:8082 -u ${{ secrets.NEXUS_USERNAME }} --password-stdin
+
+      - name: Build Docker image
+        run: |
+          IMAGE_NAME="65.2.141.37:8082/docker-hosted/node-app"
+          TAG="latest"
+          docker build -t $IMAGE_NAME:$TAG .
+
+      - name: Push Docker image to Nexus
+        run: |
+          IMAGE_NAME="65.2.141.37:8082/docker-hosted/node-app"
+          TAG="latest"
+          docker push $IMAGE_NAME:$TAG
