--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,27 +10,26 @@ on:
 
 jobs:
   build:
-    name: Build & Test
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
         with:
-          node-version: 18
-          registry-url: 'https://registry.npmjs.org/'
+          node-version: 20.x
+          cache: 'npm'
 
-      - name: Install Dependencies
-        run: npm install
+      - name: Install dependencies
+        run: npm ci
 
-      - name: Run Tests
+      - name: Build
+        run: npm run build --if-present
+
+      - name: Test
         run: npm test
-
-      - name: Build Project
-        run: npm run build
 
       - name: Archive Build Artifacts
         uses: actions/upload-artifact@v3
