--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,10 +11,10 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
 
       - name: Set up Node.js
-        uses: actions/setup-node@v4
+        uses: actions/setup-node@v3
         with:
           node-version: 20.x
           cache: 'npm'
@@ -28,12 +28,26 @@ jobs:
       - name: Test
         run: npm test
 
-      - name: Upload Build Artifacts
-        uses: actions/upload-artifact@v4
+
+  docker:
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Download Build Artifacts
+        uses: actions/download-artifact@v3
         with:
           name: nodejs-build
-          path: |
-            dist/
-            package.json
-            package-lock.json
-          retention-days: 5
+          path: .
+
+      - name: Log in to Docker Hub
+        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+
+      - name: Build Docker Image
+        run: docker build -t gokulmeyghanam/nodejs-app:latest .
+
+      - name: Push Docker Image to Docker Hub
+        run: docker push gokulmeyghanam/nodejs-app:latest
